// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account should render user Info when request is success 1`] = `
<div>
  <div
    class="ant-page-header"
  >
    <div
      class="ant-page-header-heading"
    >
      <div
        class="ant-page-header-heading-left"
      >
        <span
          class="ant-page-header-heading-title"
          title="account.pageTitle"
        >
          account.pageTitle
        </span>
      </div>
    </div>
    <div
      class="ant-page-header-content"
    >
      account.pageDesc
    </div>
  </div>
  <section
    class="padding-content"
  >
    <div
      class="ant-card ant-card-bordered"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            account.accountTitle
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-3"
          >
            <h5
              class="ant-typography"
            >
              user.userForm.username
            </h5>
          </div>
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-21"
          >
            <span
              class="ant-typography"
            >
              --
            </span>
          </div>
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-3"
          >
            <h5
              class="ant-typography"
            >
              user.userForm.email
            </h5>
          </div>
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-10"
          >
            <div>
              <span
                class="ant-typography"
              >
                --
                <a
                  class="ant-typography"
                >
                  <span
                    aria-label="edit"
                    class="anticon anticon-edit"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="edit"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                      />
                    </svg>
                  </span>
                </a>
              </span>
            </div>
            <div
              hidden=""
            >
              <span
                class="ant-input-affix-wrapper"
              >
                <input
                  class="ant-input"
                  id="emailInput"
                  placeholder="common.form.placeholder.input"
                  type="text"
                  value=""
                />
                <span
                  class="ant-input-suffix"
                >
                  <span
                    aria-label="enter"
                    class="anticon anticon-enter"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="enter"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
          </div>
          <div
            class="ant-divider ant-divider-horizontal"
            role="separator"
          />
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-3"
          >
            <h5
              class="ant-typography"
            >
              user.userForm.role
            </h5>
          </div>
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-21"
          >
            <span
              class="ant-typography"
            >
              --
            </span>
          </div>
          <div
            class="ant-col ant-col-24"
          >
            <button
              class="ant-btn ant-btn-primary"
              data-testid="accountModifyPasswordBtn"
              type="button"
            >
              <span>
                account.modifyPassword.button
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Account should render user Info when request is success 2`] = `
<div>
  <div
    class="ant-page-header"
  >
    <div
      class="ant-page-header-heading"
    >
      <div
        class="ant-page-header-heading-left"
      >
        <span
          class="ant-page-header-heading-title"
          title="account.pageTitle"
        >
          account.pageTitle
        </span>
      </div>
    </div>
    <div
      class="ant-page-header-content"
    >
      account.pageDesc
    </div>
  </div>
  <section
    class="padding-content"
  >
    <div
      class="ant-card ant-card-bordered"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            account.accountTitle
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-3"
          >
            <h5
              class="ant-typography"
            >
              user.userForm.username
            </h5>
          </div>
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-21"
          >
            <span
              class="ant-typography"
            >
              user_test1
            </span>
          </div>
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-3"
          >
            <h5
              class="ant-typography"
            >
              user.userForm.email
            </h5>
          </div>
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-10"
          >
            <div>
              <span
                class="ant-typography"
              >
                aaaa@bbbb.ccc
                <a
                  class="ant-typography"
                >
                  <span
                    aria-label="edit"
                    class="anticon anticon-edit"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="edit"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                      />
                    </svg>
                  </span>
                </a>
              </span>
            </div>
            <div
              hidden=""
            >
              <span
                class="ant-input-affix-wrapper"
              >
                <input
                  class="ant-input"
                  id="emailInput"
                  placeholder="common.form.placeholder.input"
                  type="text"
                  value=""
                />
                <span
                  class="ant-input-suffix"
                >
                  <span
                    aria-label="enter"
                    class="anticon anticon-enter"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="enter"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
          </div>
          <div
            class="ant-divider ant-divider-horizontal"
            role="separator"
          />
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-3"
          >
            <h5
              class="ant-typography"
            >
              user.userForm.role
            </h5>
          </div>
          <div
            class="ant-col ant-col-xs-24 ant-col-sm-21"
          >
            <span
              class="ant-typography"
            >
              <span
                class="ant-tag"
              >
                role1
              </span>
              <span
                class="ant-tag"
              >
                role2
              </span>
            </span>
          </div>
          <div
            class="ant-col ant-col-24"
          >
            <button
              class="ant-btn ant-btn-primary"
              data-testid="accountModifyPasswordBtn"
              type="button"
            >
              <span>
                account.modifyPassword.button
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
